<resources>
    <string name="app_name">SportVerwaltungVeranstalter</string>

    <string name="action_settings">Settings</string>
    <string name="example_header">HEADER</string>

    <!-- Userdata -->
    <string name="hint_username">Username</string>
    <string name="example_username">user</string>

    <string name="hint_email">Email</string>
    <string name="example_email">user@gmail.com</string>

    <string name="hint_password">Password</string>

    <string name="hint_confirmPassword">Confirm password</string>

    <string name="label_rank">Rank:</string>
    <string name="example_rank">0</string>

    <string name="label_points">Points:</string>
    <string name="example_points">0</string>


    <!-- Images -->
    <string name="desc_profilePicture">profile picture</string>
    <string name="desc_logo">Sporteventmanager</string>


    <!-- GUI -->
    <!--Login/Register-->
    <string name="text_abmelden">Logout</string>
    <string name="text_button_teilnehmen">Participate</string>

    <string name="text_button_register">Register</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_button_login">Login</string>
    <string name="text_not_registered_yet">Not registered yet?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_invalidEmail">email not valid</string>
    <string name="error_invalidName">username must be at least 3 characters long</string>
    <string name="error_invalidPassword">password must be at least 6 characters long</string>
    <string name="error_invalidConfirmPassword">passwords do not match</string>

    <string-array name="test_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <!--activity_recovery-->
    <string name="text_recover">Recover</string>
    <!--activity_verify-->
    <string name="register_success">Registered successfully. Check your inbox for the verification-email.</string>
    <!--activity_add_event-->
    <string name="text_editText_title">Title</string>
    <string name="text_viewText_sportart">Sport</string>
    <string name="text_editText_location">Location</string>
    <string name="text_editText_date">Date</string>
    <string name="text_editText_participators">max. number participants</string>
    <string name="text_editText_details">Details</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_save">Save</string>


    <!-- EXAMPLE GENERAL SETTINGS -->
    <string name="pref_default_display_name">Maria Ashcroft</string>

    <!-- EXAMPLE SETTINGS FOR NOTIFICATION -->
    <string name="pref_ringtone_silent">Silent</string>

    <!--EXAMPLE SETTINGS FOR DATA & SYNC->
    <!-pref_account-->
    <string name="pref_title_change_name">Change Name</string>
    <string name="pref_title_change_email">Change Email</string>
    <string name="pref_title_change_password">Change Password</string>
    <string name="pref_default_change_email">monika.ashcraft@gmail.com</string>
    <string name="pref_default_change_password">monika</string>

    <!--pref_data_sync-->
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!--pref_data_headers-->
    <string name="pref_header_Account">Account</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <!--pref_notification-->
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!--menu_drawer-->
    <string name="title_navigation">Navigation</string>
    <string name="title_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_other">Other</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>>
    <string name="default_ip">192.168.143.150</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_ip">IP-Address</string>
</resources>
