<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/title_navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account"
                    android:title="@string/title_profile" />
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_event"
                    android:title="@string/title_events" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/title_logout" />
        </menu>
    </item>

</menu>
